--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,48 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:EmtL/VCihGSoiyn4eJkVoqyMXYNvaA0H80angZOQiLPZUweWchROG0eyvEt0M5ldmA36wYfoNAw5xxt/xxUf+Io=,iv:0cA8YNLvJzhrtbRllqlF17ZaiYz2fm7O8GTdTPDdnZE=,tag:PvQXTJg7wrwpO0yUR7Amuw==,type:comment]
-    #ENC[AES256_GCM,data:yoCYnHJZy2PeTYvYkGDmCLlPM+gwZPVGogP+SAFCgi2XdI0bIpwlCAhBz2o=,iv:BkstBp9Fsy891w2ZYned8SWuu10ApbmIr5/GVAALj7o=,tag:ac7dMODH/ziXAUZdhgN1vA==,type:comment]
-    VIP: ENC[AES256_GCM,data:mCDUhcEOHsjs1jwoqA==,iv:q9oC/mqXWy1W3fF9ZQZdIdpyi8WavFCbuY4DvxtqKms=,tag:G1u0g8rDDLz3qhgi8jkzRQ==,type:str]
-    #ENC[AES256_GCM,data:a6dDCxTTIzyFAF7wGhqzF1B2nuBFQ4Eaq5mi,iv:sBj+Z4iLdiOVHrgOG+BgrOeuuvkbxg1b2DKLjRAQaoc=,tag:2z1GRivf/h/YNgIuH19P2A==,type:comment]
-    #ENC[AES256_GCM,data:gLDUIN1Db6j/g13Mmuuglrgo41tXara59ILT8OUeyFjHCk3V8Ud+59Ixc90r5ckRPspKdED2hhRqzhByvcVFUKGNrtmBnXju5gG86Oez3ahKN/MT4jyQhEU=,iv:7uG4yiMkuTEtUrnkwcZ/LI8JKm34UNeh65OwKN/bOQI=,tag:96twX3d8FSg6I69bCg75JQ==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:heHOrK0F4+GUmQH/AJ8=,iv:sjNktIMBVm4uciAKSw8tO36qCgRwKXC8hAxiMRf+pwY=,tag:/kJB+xmmubK+F+jP87NlDg==,type:str]
-    #ENC[AES256_GCM,data:bZUaKJvelWmE/zdLCl/jarB+MTagT5asbcRaz9tADy6Kiw==,iv:Tn43Fqzhx5DhWPydwhK7wJIDEoFnQofJOzLD3O+ESMI=,tag:sGzPl9n0LetoXrpfs/gJTw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:uraJi41Y/jlklPpwqw==,iv:qgeuHQDA2elEhX4DXp4rZM+EZJ8qxyOZx9vjd6vwdwo=,tag:6rSg+ePB2+Gse7oxyGTAgw==,type:str]
-    #ENC[AES256_GCM,data:RwJyiO3havM+E9K2l/5TTHF6Q+4Q6wyaggyqgXycrHGBsTlORTxLPCOejUfyQJI=,iv:dgrzm9fpymaX+YnwIZIfThy0cCJwIhVl7CF1Ji6uLyA=,tag:S90Zv5XPUhq+R53aKxRgzQ==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:PpRkX298//HoarDB5/WFTfRd0v25sSn5DBDvo4yDUg==,iv:QEP2AMol4vSPH1cvO7uFY/qxVUnHnjcfeefk20QBLDA=,tag:duouelWwZLT46BidpeND5w==,type:str]
-    #ENC[AES256_GCM,data:ag1mTYeF9uQAL6P9fJYl59IDVjrePPHxYIlM3wjZVnOodjtwCkbhbgkB7kjuVuJnLtV67PVdirN5wiunHNeCG3kaonLex56JS0HiKWxOHZ5mvQ==,iv:rGU6V18Xmx7BSteRQRXJtZ8jIG2zjoU94w/N5+cPHXo=,tag:Usouu+WubPFp2nQQ7qexJg==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:jqari46lHx39deQIxrHE,iv:Cq5Ba4CVZvO6aScZqamZ+bxQHHVGU9jfmeVm7O0+tkE=,tag:F5rVv5WXKoK6dpdbEOSTWA==,type:str]
-    #ENC[AES256_GCM,data:I/bFx89h0V+CWbwrCUk08lRIHxt0b3OloX5EjBRyf5+o,iv:lfCq8uw1BCr1TD9kf7XFEhLPnOGnEpjKmNHdjqprDC0=,tag:FsBbocU1oRq/E9HzvJ6Zaw==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:bsMHA2BvtTJQWAC2gg93,iv:V/rWJGL00teGQOHcUm2XpObrI645C47xuC1drVZnIZs=,tag:CyBRqNf1B+I1KsNNEquVpA==,type:str]
-    #ENC[AES256_GCM,data:w09cvD8Ia3uFKPgsTWMx5w+DAsqqlybOIC+O6yLk3+LwIA/VlR26+lvuPsPLTrbPEKve6eNtuzNC6emNIHjjjHy6eDLnNxcyuLoe54PPn7A=,iv:etDCwsxcgD5nyt299nD5iJqiGsbXHjfRQVGFTmOrPXM=,tag:UuA76EQZTi3YlMmKkitidw==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:EhNXhyuvKCwxkoXKbl+T,iv:laVyrLPwUXl7Tpu5brpiJmA0Bp32ToWH/Ee3c63NEbg=,tag:cZ8+6hbMmC1KHctTt+53YA==,type:str]
-    #ENC[AES256_GCM,data:5Zdule+5KKfOCpFEO5zfk6B/YhMMXwfI0qlp01RTJEwken81K7X1J3ElNUiHeQIFWwYQLGt6/pDzQupEXjOVNS6cikGWZVNnTyychNopM9Spcp4s1iHz,iv:B/72/LxXumU2qkGCjuvvTrL7Qyefyn+54Lr0IzKvH1I=,tag:+ceNjHm5BSJmqfSUqfcRQQ==,type:comment]
-    #ENC[AES256_GCM,data:cSdYBE7jqXaFlZZu14LjStiitvuK1J6zXfv47zm29quQ5V5Ae9qC09qOuFsUtBYI9x9GxKJYcEVH80WxJSapUhO4UcfnEP5ndTTrA8zjRIEVUK0tD9Q1tLJN7DkenbmTnlUgZtvW7OoDVQ0lYKyu3yZiup0TooreB3cnVw==,iv:ZbvUnmHNphUzzyhPRGip3CLQSMlXsdfMMhyu8GlyX8s=,tag:qW4J1/KRgQyqVIz7kGD3ig==,type:comment]
-    #ENC[AES256_GCM,data:C3Trrbb5GbVt6QqR+utmF4+GmdAqPds0+aSMogPz91GkHigw5IGraBjmI6mIp0sR2akwL6zhcFZmNfXICflRg3D0zfSWalfpMyVfYilPsQw=,iv:tWMKhpsYdKMQ2hNRkwjGsJEZCacIbfjbUSJ+92D0VDg=,tag:W7+Cpk1pP8lWNxQsfiiaDg==,type:comment]
-    #ENC[AES256_GCM,data:AFqRGsbTfoAka2ZtKP7ubgDTgQcnkrrVlrdeJL03+FZvkjAH+gQuMrYGJMvSjoEHlX07IytN,iv:7LZY6mOA565uuClJytf+HQ1Tz4t18NQ+N6UQ2E+G//g=,tag:u7G9cIm9V4DsCmwXcbrrWA==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:SX/bZV5SAw2ij4vx,iv:/MrmRE7e/MARPAZDE87O9ZR6RQ94c5cQ0i2nMLqF6Rg=,tag:n8T3Z9oZJcy4m9gQyM+yRg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:iec2nZleDOIK7W3MscRnc4M=,iv:+E63J1iWWnaPbu1AJebIQ2Z2mJNqOcTw1OUiWSXZ7Qk=,tag:PhGr59WA4brxXdcMiWM4oQ==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:aFefHXsmGhL1VZsOEFfvcYzy+4WoJKuTP5xgwby1xTo=,iv:F0kRaCGeV7jniQfKVfTO0wooT3PLRScSaVQw6u0fkGM=,tag:B7q/PYPrZse3RoyGePuePA==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:anjMx4RMNizCmN9mf0i9qzZdmgyVAFt88GHNXf5/5gSq8i7aDFYLzw==,iv:8NixNGee8btv4RU1wEqWdEmPTGDhWM8RekmZIQmwi20=,tag:cfi4rFRqDqE+oxo5MaWtSQ==,type:str]
-    #ENC[AES256_GCM,data:6A+CbneI/S5X4+T/8ylV5mRO3OP5z3WrD/nnXdaX4odHrrWn7NKMV6GWzQjjtNH9LxlikYBUtmSCCpgAOzFHTg==,iv:fcnc/3HQ4WvHXqCXFLzswUdBa7K8fW7LdRr9PLNwY58=,tag:unwbGZ00ygr3flTgHRbcLQ==,type:comment]
-    #ENC[AES256_GCM,data:X7RkCsTh2XcS2jMWptlY1y45wzIs1SgoHNct6VULVddh+o9Xtxe8JcWjWig2tmOQR39u57zTAj8=,iv:Ft/dlCrLmcFNPN7uyqg6mU582ZghESFbq+AO6y6yAt0=,tag:UNVHdLLqn0eEfqBd96ZG9A==,type:comment]
-    #ENC[AES256_GCM,data:wfueTmjCtmRUzWhXxUghEBHp4rZzw7aDfQ==,iv:YLq39VCWhQZ2yGvJLUh/el1IzdMUHgdSxgyHkZb7c98=,tag:xSDhqLgMVb1o5v9tkRZtow==,type:comment]
-    #ENC[AES256_GCM,data:FeWDMnivggvYj62Wkhst8E18BTq1W6gCphb/k+mUAv8VZ/LytdGpgOm3GSdgyiZgnqAI4K8xuReIyieLq9h6ZXZueX/lTi7yUbp/dgo=,iv:qjZgYK41P+RS0F5JfhXZyPW9PS1ujKneJZqtJ2JP28Q=,tag:5E44Ux9q2z8zkU9T6nJ05g==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:lRdQvtb1AZIKrhYS+CvRE+yDaMBedtKL+vVVoM8Aty3/2el6fS8C+me3G5y40Xfy,iv:dYsbUMelcb8Tq2+G0JfEvQS3zDIP1Zd3Q4DcC5jfVmA=,tag:wEo6IWpMBg/tf+vJvXiOyw==,type:str]
-    #ENC[AES256_GCM,data:aSilUakbbMGPmgNhJQwL7kftJH8PtCKmNCvaZMC8MdqiPiUUTMBSsmC/T0vD0My1StvezBXCTRBoVp/AdHUXM+FED5y5FlQ=,iv:BAM3RDJb3Oh4fmRriX83UqKHUi9Sn1jTBQ30oKcRRrA=,tag:IlfKTjHQFEbNwfDVu2/B7g==,type:comment]
-    #ENC[AES256_GCM,data:s5OfkOhoiZaCzP9/YWKUPrMvD6+f7rMiVg8yGt3j/wAvgNkhEL7VpMlQ5j1pHZBAveIHg34K,iv:U8vhnZ9z8IfwfbQvXIjEj762kt8YQoY4GCzGHR5tj5M=,tag:Tl/QjGGv68HwDhJ98Py1Pg==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:BUEuEN6T+g==,iv:6HlGVoIUQfnzpPvTQHJaoQ1QoRJC9ks321w+4/L93wI=,tag:bEVyTFE0eOrb/oAdh9s8vw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:SL6Bys3NFrvzuR4PkEWQ/GgPYzY=,iv:j/cz4DV/M+GhPjtkrFuh/eeLFyB3tFt7xt2DuLCJetA=,tag:x5sXfFukgfXX0liM9WLOog==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:iMxwCkHzObDsmR4=,iv:CQp0mYc6bgj1rH9DcKuWkA6xLcZyQpfZFxjPLQXXeVc=,tag:M445plSTAdumvJyY2jjnUA==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:CW/kGwF7g4fkW7MzUC34,iv:ygWi+A2UcQbBveZro0KdzIhbuVdA3nVRaXBTJAl+5Kg=,tag:DyiHRyfbty9bQqqyqFLpPw==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:LWmQxFsFKUcl9/CYGXVXvOlh0O3dvLAbUA==,iv:+bmFCgdof5WTYS2v7qrzglw2I8goQzEccBndYLawldk=,tag:eVu3f6CnWrydREETNwF54g==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:rnW2Avg9NQ/IxjUttEdtgNY5qafpCW0J,iv:ow059phJ5F4NDFH0v6VIq/zl5mwl0E71lKXbIEwU2vA=,tag:cbFmcf/301WR1S8UrA0ciw==,type:str]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:1T/+yJ15OSFfsUSH/Iev9s8X,iv:xoe0yoanFVjH8OehoPKkqaTzIcH9cEY6wKSU7LzMOOo=,tag:YtgeM5uDWaGcT7wtJKMzWA==,type:str]
-    #ENC[AES256_GCM,data:r4qn1WlizsuEdfkxK2A=,iv:o3zfvVmsE0mSeGMPUfD7j5F6yvOi+97cT081l17OIu0=,tag:aCTTj7qZ4Oq+TvekChR/5w==,type:comment]
-    PODNET: ENC[AES256_GCM,data:5Jn6wgcfR/DeAoLvRQ==,iv:eoObpC058uKVU2msVr6QtvpKbDp/yNV/3ZMrZ7oCcB8=,tag:u7A/XeboF15uB2/jeI59iA==,type:str]
-    SVCNET: ENC[AES256_GCM,data:zoEXXdC9lhWJDqTIDg==,iv:cMh2MDEFh2IL5bGdvXP/EEdUeV6mBAhwKoPOtTbk52A=,tag:Z7sXqet+OODbQqp/sY15cA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:gkfgDw==,iv:HUKPXbnvN/O0u3n3+oq/84bbOgZVXB5bQh5V/ydlMPw=,tag:24s2HvMxJStwG1mDOL1lCg==,type:str]
+    #ENC[AES256_GCM,data:yg0Yl/PBT3BguAQ6cxslXIASU2lCVe0kgor1lZ9mVICbbvdN9Kln8hWCZBW3LL/qZlYwUDPcRMfCruBGtIAQTKs=,iv:GtENyh51+BandgycZV9Wp9gTHBDwMA2b6Tuzprye8GY=,tag:ttSuS9EP61d1NxLM0MFUpg==,type:comment]
+    #ENC[AES256_GCM,data:fe05gvv8iCh5qdSnG1t+axO7nB+Ky9rfWsw1CEhD31csFreseGH82fOKi2w=,iv:CmJ0zi4CNQJOjh4OCf+WN1372kFDRDLkesZmG6J5kvw=,tag:0Li/ymzQJirOzFwew8Cv7w==,type:comment]
+    VIP: ENC[AES256_GCM,data:xnr8LehD5hNiCd2UhA==,iv:5AmOzyxqZISUoSag2d5qnwXoLJwE9GI6fZEnTIbCdWQ=,tag:yC84BaLC3P3Bw/nJH2MIhA==,type:str]
+    #ENC[AES256_GCM,data:1StGXQZoDPOjqNHO1RQTM1Cu8zQ1wcTUN7rJ,iv:sJKnl5h8P/v4c3F+D/Wul33gn4ttgj9zbWlWtbYCnqo=,tag:oiLPMI9qr/HWGLLmodxLkg==,type:comment]
+    #ENC[AES256_GCM,data:mU0CSL2pMu3AvuQ6bIKl5JNxYG78mn5v7JSYifvMeE44N9f2hI7JpkhFwU0Y4lh0bZDXP23MnBISNDSO3JclwHz0m/Ov8h7Pg/ZdKcEVhRp7gFV/REalxnE=,iv:uBE+OWOcCM5ltLFAS4DdWRWNcDs3YelGJY+fHs6IxvY=,tag:SEb40QZynad53jmDidy2cQ==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:tQZdRh+8S39/z6Mn33A=,iv:06ulhJHZh8cB0+l5AoFbycXzvUKaCupQ4H80h9/UwnQ=,tag:D0/TryUPXMlC/RsSptAyYw==,type:str]
+    #ENC[AES256_GCM,data:PV5+SMwe05S/vz2vhZnXfdvVnNM//tRkkAcqskMKobOKxw==,iv:QGzvGjZ54BMCib1KF6cSPERIR06I2oqsEMNqyRHe1HE=,tag:uaR2dODvyyBbvmNTml/UiQ==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:zNuV3eyEVl/JLVAhVA==,iv:pNYpBsPARuzoDW8AjFGdFr21l7G+GepVQUTGKSriEas=,tag:5YAk77tlVlffLJLvlzXSUQ==,type:str]
+    #ENC[AES256_GCM,data:nW4zuy13GTgkDlUEINKsQMsVGOtqE9PZHJpr5xBe1ZAh3RM+y+JOw+1CmOBpRB8=,iv:vOu600KNtQ25a5IBZGwx0UlXmrvSeWYrCLORcVrGRSA=,tag:qBeGDD0GYMhA6da7KpVA+g==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:P1lxUS3MoDtsc8VeZPf0gVhJopgC5P1AOBSkL139CA==,iv:/KC6GxASLjGWPmWZa8dOgTSZhwFYyvAaRISLUtL1HGc=,tag:dkP/EtQjmLc0YCwa1v85qw==,type:str]
+    #ENC[AES256_GCM,data:yGWWMBOp+aQCJ0B36hRFU70BT6Y6eUoSUyNU5Hyx+unD3XbB6hzMYr/j3TFTJWvLEjyS4Z3f/usjycVCHchG0YVuauYQOU5wovDZBQWdZv3dsw==,iv:ECPAHfpz4oPH/lMtq1Wu7pnzDmPxEtUTYaO130ShQm4=,tag:vCa/E8BfvRSflKAQNtFlFg==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:zkCyARVULeEcfXnLPXCL,iv:ioOhdUfSsHvxWufiaSc8HZmRTwigoT62Dd57OvV3xXA=,tag:bx66PJSYsyrUoHawF9ceuw==,type:str]
+    #ENC[AES256_GCM,data:Jb5/jolY97JzjWZTujTcuP3VQOu8K7GKbtNAcmkIVx77,iv:zydIUzv+Jg63g5LlpM+FLtP3qej99jqi1bbAAsBH4fk=,tag:8UnHGZYVHGtjuLGLrBKB8g==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:9zJVHcmAhQOsEktx7HgV,iv:tjfevV9SgJCtAjHj8If0Vp3codtzxBOHEzJLB/QJ9r4=,tag:MRAY8QQT6v5ck/ZytvGrlA==,type:str]
+    #ENC[AES256_GCM,data:/lxMKSFYkLB94XXd1bKUdY0LIgIGYN2wCZAnBRTz/UfgNxzdqmIuGm8e31vCvYJmMqNHJjdANp3crWwslk/ly18x5xBz8QkJ/6JRXMBLZXc=,iv:abhw8AVF2qsR8Nd8GbcCF+rKa/jGzMzk3sKYp/auCfQ=,tag:h2sRwP/BY6SZuPiqKrESUQ==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:zFCnPsuT/GTKiUSPqjii,iv:9Jxs5isDn5vd7OjjJzkufH+mo2dj0T0CAkXXv3cGulY=,tag:CrmrORYxaLGAIvpWaV+Yug==,type:str]
+    #ENC[AES256_GCM,data:rQK8zBNWUZUccsZRS4iD8guLWSgU9StGKYncwi7E6yyqVT51kDEY00dSByYvV8U2Dciz0KjL/ubvLauVwSSJjmZYx/RZ4xSRYWVvEo+2ktKHHzU5w/eK,iv:+tmoskDHl99PBmx2zagMDeUXX3gljg7lYvlasAZ8/ro=,tag:qsj9iu4U4FcIX+szFII1UA==,type:comment]
+    #ENC[AES256_GCM,data:rSr8Kk3TnnV9EkkDeKu+RpfliRwaZSFs7vSCC3+k8ao1r3fOveQvRfEd3Wyeao9a+KE+FQ4tvlmMDmQnFbmwidMLTptZzr0SWnDllqw8NlgxJ5ASp6t4dO6Ciwh6wYpGTBimsJyqCDtg8CRc7UF68w/JS2X0/2SybK/reA==,iv:ICUwDQWGXb3OkD2YGO7E4JYCR7VBNgksDkLQpFNAy2M=,tag:rCXTQqfJrOlug8OU0svCrQ==,type:comment]
+    #ENC[AES256_GCM,data:VjYoEUtW9t501M7InFxCwLv9UStA53F6tYbWWEtjv+GHyQv+pZyjATR1UQVC5Azb4bkmrwLuT02E3Y/xWyZTPh+xIvy0ZH8LcVYPtnk6pyc=,iv:pu5db4+WeI+k8ZZoqHbpf7zlsf2Y2wL9efbhA7Sgr9o=,tag:Ix58mjYJnR2ksf0leEKB9Q==,type:comment]
+    #ENC[AES256_GCM,data:za/dfiryLz+6SDTJNjd9bdSSV1oZ1Nxq3CyiqiCRIeL4R0zve+7Yk+OairY/Rm8g7d5zuOF+,iv:5GYMFiGfkGQMb/3VBb205Dd5MRjpHlvGSahaVEb/6WM=,tag:yysYw6osLMPf9wdn9n/5ig==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:yrxdSrNkxru2w5rj,iv:gsw3/oJ2h4BV2EST83O8dtbbE7LluNSHqDmRFPvfx5g=,tag:jrTStsqpxgNN0KVN09MDnw==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:nQjhxCqkIGKQ+hYLEPaV9s8=,iv:1EMwTmF2wIPMYwNw/TnIzOi/MxM7pT87A54qrnjZ7ZY=,tag:pn5a0LUwRE0g7CuHUr1LjA==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:u8RmWISFMnb4AUYfJvmAyFBlLDubQdDWwqJze0pRMeo=,iv:ZbtLz2O5AksKwiHpyTWagh+axUIU2M59AP09ar/SpAg=,tag:4H8yitEBrUXsGox/x8VoCg==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:1v7uwWlbRPRkQ7+PkZmdC2iR/E8DgrwLutGc5cA9CjgXCTUSIQoMHQ==,iv:ZOk1V5CCniue2VvjdpbCutUen4BlwCcYSdY/o3UhSLk=,tag:1PXW/depQP106t76UNA4KA==,type:str]
+    #ENC[AES256_GCM,data:udVsPQRqU7H+K2+5DFN8CVZVpwi0p2sTPMKZ5WM99E3nKLbc7xXcOSgPLMWtrZV1FGmwLevm1WzueCcYE2bBOg==,iv:CISgahFeureLUcwtuH7xra8TwmLTRA02LZODDRjBdsc=,tag:weCe2+aFteOcTkp3AxhB6g==,type:comment]
+    #ENC[AES256_GCM,data:k+V3+8OPrtfDsA1diWBQxveEBJT1KhxXhFWmoOf2eq3MmJ/hYepTLs9xe+L0XS6gZ08HZdzfBxg=,iv:SFOpljEJ62qhLmEMZsCTbPvulmao0IFgjLBO6JyLQEc=,tag:KVUDdmUSc0Dq7BDcw1H1LA==,type:comment]
+    #ENC[AES256_GCM,data:S+lc7CebSIVnFba0owLzT91giHJr7qCeQg==,iv:ehZRWk9fXsnJHAKvjmf3Qc3l7ak5IPYYuDnoswAFhl4=,tag:bzSpZsLzccm+Cmt81IGfEw==,type:comment]
+    #ENC[AES256_GCM,data:sWqyRQBsA9O/OjGhDWjNXUTR35rrwAyCcXmUao7O3bCYJA9vpM14sHHkn+E3QvAuwEPTnJzj90ITjDzn9raOX+fnp7mK2OwqADjOz9E=,iv:g/WrAAVVdbE8GVC77N5y37sv2znWdMLWDAXfMTW5QmA=,tag:pxmRTmJfATR8sAvZNTPpBQ==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:kvk3wA8PJ/uMTlxZV6Way2BC503yOm7iZ2fYMdM2uPOpSvvxVOfh1aT3nj7m75ac,iv:XnozYBMnfxd0pP05p3BJcQcKoQImO2n67pbBg70jpA4=,tag:vY9DEnLgwhdnm/qBeKs6BQ==,type:str]
+    #ENC[AES256_GCM,data:t0bAC6CCC/8QD9kcUDPE24l5HQ2Pxu9aSxDS8n5juXdVAiuQwrmJ6UGCAvB+uetRZfCM0LCwU3Nk9CZ/LvOH6sjLkkWuQc4=,iv:Vz2ZAdOCwDPi08lqn2Fi/CTvxblcYOug4uDsbtUEACw=,tag:G7alMZfeaPQz3frAV+Ni4Q==,type:comment]
+    #ENC[AES256_GCM,data:0bQQDvY3n2cUUpyi1hEiyBAAATgdB+DFGHibbO4fCmxczIIjO6I3HAF22izu9tCxjSr/xqZu,iv:wunyHHYfa48eueivl62aYGYjZZ7u9YK5UBzEwwooTPE=,tag:myPOzoeLGHSDtYG9OZKfMg==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:zfTTJBoMxw==,iv:uXLbljopfzlrkx+ThIkUe80WyTj7pD2kV/sJ/Sj4POo=,tag:RuYeBRCjTF9EHPX4jieASg==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:8jnf2Ptw1hNSShWyMegdWIBThS8=,iv:2geUsniCYOfghCBnFccfZ7ZLOL878KKkEG2Taj9E1nQ=,tag:vqy0pW+Ua1+UjQIMUkoutA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:4lbenHUnyOVOlVo=,iv:26LBkf/M8L6ooYyKtro6BvSza1HAUqWmrKGBTruM0+I=,tag:s3rWZ2gOVRF/G3TnEglfhQ==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:tyfEBnzqPTRj/QBY50Q+,iv:8piCIuK3AlYx6NnZRDBZu/4UKq2he4aDX+juKXsbH54=,tag:XW+2sEwAvMBTmXkDJfBiEA==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:vM9I/ebeTFc9EWgyp80V3rkBJDqKCMht0w==,iv:p0AVmG40WM0gFe5mIsO4znFkdNlMaF7xtPLNZoA1UVg=,tag:030HtftOQZoQQO2nuIMtmw==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:rmtp6000FSPH6tPE3jCzrbFhUJfS36yr,iv:bm84mQFtC/dvumRplCANYy9mGoSj4E5dkfC96gxYX+I=,tag:pMTt5lLw5j2t6Q0n3yG9vQ==,type:str]
+    #ENC[AES256_GCM,data:kz+gyo69lNBk4pgncJDr7X49r+9t7RAhJAb4XlYCkYwS5JosyOA=,iv:5O7De3jD4rTDIWomfIzoQDebHhYSfAEon2CT6OAr4AY=,tag:Yr091D/QEYqih/AkNviCOA==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:jv/iyfcvUbKs/Kn7Ut02/OJ7N6A=,iv:KxOMpD+i5RtjWuAc1aA7SuBP1TrsCmE4wnmlIwoFt3k=,tag:V62a7AvI8af5UmPlDepZFA==,type:str]
+    #ENC[AES256_GCM,data:ROX69qCv7RCZNngjhGU=,iv:gEYBbQHImVzxqLlDvzF/Jsn2itHnNXdJ9NNWzZWjHOw=,tag:zgu7D4xNMCDe0MkiT2HRew==,type:comment]
+    PODNET: ENC[AES256_GCM,data:LxgYrwgKh4rjZ2C4pg==,iv:fOSUBiVtq+KFbad7OUdUGIn9QPtrhyP3vsIOz8Rl8s4=,tag:nPcXRzK9WEcp0EfOor1E2Q==,type:str]
+    SVCNET: ENC[AES256_GCM,data:ezsvYpa9mhuSoeLWuQ==,iv:ddXyMkwTml1pY31GwQmkkUppLo9AEodMbCVEguOpE3k=,tag:SO+iktO25DPwFViZEU86YA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:GkWupg==,iv:3Egr8/PblzQ82Y9Roy5LvN+fgSci5WAqJg2E9Y7SH0Q=,tag:25VndTjWfU+cX6K+tj6ZAw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -56,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKU3MvZzRsU1dkTGlDOUxU
-            L1ZYQ0dRVFpmK3pPWVRCdVAxaG9PWSs3YzBBCms4VVo3SWNFdmZSc01kd3lMSExp
-            dURXdVdSVDA2U2hUMkdiOGVvRTJuRUEKLS0tIDdUYThhZGtKL3MrV3R3VEpIbGpX
-            M2pqZGhiUGUwT3Z5R2sraXRtM1d2dVkK2tDO/mL8TNWYWlF1DaNp+QJQDAYQk0yt
-            uZdnbrVwwiLySTX9mDGf3e5BVDl/fwuoIa/7oNaS5OrU7v0bfjfeow==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtNWs2cFlid0RMK01IU2o0
+            N01SalZ3Sm9tQ0FLRmZCSDZZMjVJQlNrRzE4CjZXa3JUT1B5RGV0RmMyWE1GckhR
+            bHRENkZTbzcwNHA4aEhpNS9MMlJTaHMKLS0tICtPREFyWkNHdC91RUVZcmMwYVIw
+            d0Z5RHJwbittaDlkRzI4WEVUck13MDQKwPTWdLNqINOkZMCpOiiSqXWl4rSrAzFX
+            ARpPAuk2Fjj6zQYlEkxH86tnCxwbusIIE15BFGB7giFlCv2BJWNgkQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-09T15:44:02Z"
-    mac: ENC[AES256_GCM,data:j1u0rwUwQZWVwCQ8fBn9Tv29wGxU/YWR2QY0diTsNHBrB+WTLx9vkJ90t38sWDYyWUyTebmR/tpWkrZ4RGZ0PI3QBjXU9rmZaa8LFewM9eUygeMmzb1+dhMJStni7oKAYVTgFmbpB/ZAags1+UhpHBuB7Q59A+k10UGQfjsp2fQ=,iv:qm6SHd715PFnq5CngWhJfMgx3HQqPQBCzGJloFHG9O8=,tag:b10W8bK7keDVGIBMJ7Yh3g==,type:str]
+    lastmodified: "2025-01-10T23:29:28Z"
+    mac: ENC[AES256_GCM,data:siqHnVzMffu0mAUDDhSZ/bhB3/955zGW5VpCUdSPVcquVQDLvFq1QgW8QcoZiTQX9uGvuhpkfVIxit9dTiT2JC9aw8NYmWQa3vBfJKeTYNejn5lxMDf1NhQBoe0hKRyqkrNwpum88RyoZBu7V2nPfrIqMesvGgn3wsn7H/CJF9Y=,iv:bI6KQbF+FzuAj1LlFQfLF7arRQiZ57qC5V3f8u/AF1E=,tag:LQdttMmFvBaEYJ88IWYIdw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
